--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^3.15.2",
     "date-fns": "^2.22.1",
     "date-fns-tz": "^1.1.4",
+    "jalaali-js": "^1.2.6",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
